--- a/src/stylus/partials/style.styl
+++ b/src/stylus/partials/style.styl
@@ -28,12 +28,13 @@ p {
 /*
 TOP
 **/
-.top
-  height: 80vh
-  overflow hidden
+.top {
+  overflow: hidden;
+}
 
-.top__reservation
-  text-align: center
+.top__reservation {
+  text-align: center; 
+}
 /*
 TOP
 **/
